data/forge_javadoc/1.7.10/processed/net_minecraft_world_storage_SaveFormatOld.md
# SaveFormatOld

**Inheritance:** java.lang.Object → net.minecraft.world.storage.SaveFormatOld

## Class signature

```java
public class SaveFormatOld extends java.lang.Object implements ISaveFormat
```

## Constructors

- `SaveFormatOld(java.io.File p_i2147_1_)`

## Methods

- `boolean canLoadWorld(java.lang.String p_90033_1_)`
- `boolean convertMapFormat(java.lang.String p_75805_1_, IProgressUpdate p_75805_2_)`
- `protected static boolean deleteFiles(java.io.File[] p_75807_0_)`
- `boolean deleteWorldDirectory(java.lang.String p_75802_1_)`
- `void flushCache()`
- `java.lang.String func_154333_a()`
- `boolean func_154334_a(java.lang.String p_154334_1_)`
- `boolean func_154335_d(java.lang.String p_154335_1_)`
- `java.util.List getSaveList()`
- `ISaveHandler getSaveLoader(java.lang.String p_75804_1_, boolean p_75804_2_)`
- `WorldInfo getWorldInfo(java.lang.String p_75803_1_)`
- `boolean isOldMapFormat(java.lang.String p_75801_1_)`
- `void renameWorld(java.lang.String p_75806_1_, java.lang.String p_75806_2_)`

## Fields

- `java.io.File savesDirectory`